src/test/ui/consts/control-flow/assert.if_match.stderr
error[E0658]: panicking in constants is unstable
  --> $DIR/assert.rs:8:15
   |
LL | const _: () = assert!(true);
   |               ^^^^^^^^^^^^^
   |
   = note: see issue #51999 <https://github.com/rust-lang/rust/issues/51999> for more information
   = help: add `#![feature(const_panic)]` to the crate attributes to enable
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: panicking in constants is unstable
  --> $DIR/assert.rs:12:15
   |
LL | const _: () = assert!(false);
   |               ^^^^^^^^^^^^^^
   |
   = note: see issue #51999 <https://github.com/rust-lang/rust/issues/51999> for more information
   = help: add `#![feature(const_panic)]` to the crate attributes to enable
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
